# pinger

./: .gitignore  CHANGELOG.md  Cargo.toml  build.rs  build.sh  readme.md
.github/workflows/: build.yml  release.yml
src/: login_item.rs  main.rs
