[package]
name = "pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tao = "0.31"
# cocoa = "0.25"
# objc = "0.2"
tray-icon = "0.19.2"
tao = "0.31"
surge-ping = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
array-init = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[package.metadata.bundle]
name = "Pinger"
identifier = "io.github.bavardage.pinger"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png"]
version = "1.0.0"
copyright = "Copyright (c) Your Name 2024. All rights reserved."
category = "Developer Tool"
short_description = "A ping monitoring tool"
long_description = """
A system tray application that monitors ping latency to Google DNS,
with visual indicators and airplane mode for high-latency networks.
"""
# Add these lines to prevent dock icon
osx_properties = { "LSBackgroundOnly" = "1", "LSUIElement" = "1" }
